[package]
name = "rspark"
version = "0.1.0"
authors = ["Thomas Harmon <harmon.t@husky.neu.edu>", "Samedh Gupta <gupta.sam@husky.neu.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sorer = { git = "https://github.com/SamedhG/sorer", branch = "rspark" }
num_cpus = "1.12.0"

