[package]
name = "liquid-ml"
version = "0.1.0"
authors = ["Thomas Harmon <harmon.t@husky.neu.edu>", "Samedh Gupta <gupta.sam@husky.neu.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sorer = { git = "https://github.com/SamedhG/sorer", branch = "master" }
tokio = { version = "0.2.13", features = ["full"] }
thiserror = "1.0.11"
num_cpus = "1.12.0"
bincode = "1.2.1"
serde = { version = "1.0.104", features = ["derive"] }
futures = "0.3.4"
crossbeam-utils = "0.7.2"

