[package]
name = "liquid-ml"
version = "0.1.0"
authors = ["Thomas Harmon <harmon.t@husky.neu.edu>", "Samedh Gupta <gupta.sam@husky.neu.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# sorer = { git = "https://github.com/SamedhG/sorer", branch = "master" }
sorer = {path = "../sorer/"}
tokio = { version = "0.2.15", features = ["full", "blocking"] }
tokio-util = { version = "0.3.1", features = ["codec"] }
thiserror = "1.0.14"
num_cpus = "1.12.0"
bincode = "1.2.1"
serde = { version = "1.0.105", features = ["derive"] }
futures = "0.3.4"
crossbeam-utils = "0.7.2"
bytes = "0.5.4"
lru = "0.4.3"
clap = { git = "https://github.com/clap-rs/clap/" }
log = "0.4.8"
simple_logger = "1.6.0"
sysinfo = "0.12.0"
deepsize = "0.1.2"
rand = "0.7.3"

